<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center_vertical">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingBottom="@dimen/activity_vertical_margin"
		tools:context=".fragment.RegistrationFragment">

		<TextView
			android:id="@+id/registrationText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textSize="20sp"
			android:paddingLeft="5dp"
			android:paddingRight="5dp"
			android:text="@string/registration_text" />

		<EditText
			android:id="@+id/msisdn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/registrationText"
			android:layout_marginTop="30dp"
			android:inputType="phone"
			android:hint="@string/registration_msisdn_hint_text" />

		<CheckBox
			android:id="@+id/terms"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/msisdn"
			android:layout_marginTop="5dp"
			android:text="@string/registration_terms_text" />

		<Button
			android:id="@+id/register"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/terms"
			android:layout_marginTop="30dp"
			android:text="@string/registration_button_text"
			android:enabled="false" />
	</RelativeLayout>
</ScrollView>
