<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center_vertical">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingBottom="@dimen/activity_vertical_margin"
		tools:context=".fragment.RegistrationFragment">

		<TextView
			android:id="@+id/pinText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textSize="20sp"
			android:paddingLeft="5dp"
			android:paddingRight="5dp"
			android:text="@string/pin_verification_text" />

		<EditText
			android:id="@+id/pin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/pinText"
			android:layout_marginTop="30dp"
			android:password="true"
			android:inputType="numberPassword"
			android:hint="@string/pin_verification_pin_hint_text" />

		<Button
			android:id="@+id/register"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/pin"
			android:layout_marginTop="30dp"
			android:text="@string/registration_button_text" />
	</RelativeLayout>
</ScrollView>
